--- a/Frontend/RecipeBuddy/src/app/modules/auth/components/register/register.component.css
+++ b/Frontend/RecipeBuddy/src/app/modules/auth/components/register/register.component.css
@@ -57,3 +57,7 @@ button{
     background-color: rgb(236, 236, 236);
     border: 2px solid rgb(115, 146, 177);
 }
+
+.input-error {
+    border: red 1px solid;
+}
