error handling for login & register

--- a/Frontend/RecipeBuddy/src/app/modules/auth/components/login/login.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/auth/components/login/login.component.html
@@ -3,14 +3,16 @@
         <div class="form-row">
             <label for="name">Username</label>
             <input id="name"
-                   formControlName="name">
+                   formControlName="name"
+                   autocomplete="off">
         </div>
 
         <div class="form-row">
             <label for="password">Password</label>
             <input id="password"
                    type="password"
-                   formControlName="password">
+                   formControlName="password"
+                   autocomplete="off">
         </div>
 
         <button type="button"
