--- a/Frontend/RecipeBuddy/src/app/modules/auth/components/register/register.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/auth/components/register/register.component.scss
@@ -1,11 +1,11 @@
-.container{
+.container {
     height: 90vh;
     width: 100%;
     display: flex;
     justify-content: center;
 }
 
-form{
+form {
     margin-top: 150px;
     height: 500px;
     width: 350px;
@@ -18,13 +18,23 @@ form{
     align-items: center;
 }
 
-.form-row{
+.form-row {
     display: flex;
     flex-direction: column;
     margin: 10px 0;
 }
+.mentor-row {
+    min-height: 30px;
+    min-width: 200px;
+    margin: 10px 0;
+    display: flex;
+    flex-direction: row;
+    label {
+        margin-left: 0.5rem;
+    }
+}
 
-input{
+input {
     height: 40px;
     width: 200px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -33,11 +43,11 @@ input{
     padding: 10px;
 }
 
-label{
+label {
     margin-bottom: 5px;
 }
 
-button{
+button {
     height: 40px;
     width: 200px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
@@ -48,11 +58,11 @@ button{
     cursor: pointer;
 }
 
-.register-btn{
+.register-btn {
     margin-top: 35px;
 }
 
-.login-btn{
+.login-btn {
     margin-top: 20px;
     background-color: rgb(236, 236, 236);
     border: 2px solid rgb(115, 146, 177);
