--- a/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.css
+++ b/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.css
@@ -1,4 +1,4 @@
-header{
+header {
     width: 100%;
     height: 10vh;
     display: flex;
@@ -6,20 +6,26 @@ header{
     align-items: center;
 }
 
-h2{
+h2 {
     margin-left: 150px;
     cursor: pointer;
     font-weight: 500;
     font-size: 20px;
 }
 
-.links{
+.links {
     margin-right: 150px;
 }
 
-a{
+a {
     margin-left: 50px;
     font-weight: 700;
     font-size: 16px;
     cursor: pointer;
+    text-decoration: none;
+    color: black;
+}
+
+.router-link-active {
+    color: #4caf50;
 }
