Fixed endpoints on BE and some displayed text on FE

--- a/Frontend/RecipeBuddy/src/app/modules/courses/components/courses-dialog/courses-dialog.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/courses/components/courses-dialog/courses-dialog.component.html
@@ -36,7 +36,7 @@
                               autocomplete="off"
                               pInputTextarea
                               style="resize: none;"></textarea>
-                    <label for="float-input">Name</label>
+                    <label for="float-input">Detailed Description</label>
                 </span>
             </div>
             <div class="form-row">
@@ -46,7 +46,7 @@
                            autocomplete="off"
                            formControlName="meetLink"
                            pInputText>
-                    <label for="float-input">Meet link</label>
+                    <label for="float-input">Meet Link</label>
                 </span>
             </div>
         </form>
