--- a/Frontend/RecipeBuddy/src/app/modules/courses/components/manage-courses/manage-courses.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/courses/components/manage-courses/manage-courses.component.html
@@ -20,7 +20,7 @@
                     <tr>
                         <th style="width:30%">Name</th>
                         <th style="width:30%">Description</th>
-                        <th style="width:30%">Meet link</th>
+                        <th style="width:30%">Meet Link</th>
                         <th style="width:10%">Actions</th>
                     </tr>
                 </ng-template>
