--- a/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
@@ -1,6 +1,7 @@
 <header>
     <h2>RecipeBuddy</h2>
     <div class="links">
+        <a [routerLink]="['home']" routerLinkActive="router-link-active">Home</a>
         <a [routerLink]="['manage-courses']" routerLinkActive="router-link-active" >Manage Courses</a>
         <a (click)="logout()"
            *ngIf="token">Logout</a>
