--- a/Frontend/RecipeBuddy/src/app/modules/auth/components/register/register.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/auth/components/register/register.component.scss
@@ -54,8 +54,9 @@ button {
     border: 0;
     border-radius: 3px;
     font-weight: 700;
-    background-color: rgb(115, 146, 177);
+    background-color: #92c24c;
     cursor: pointer;
+    font-size: 14px;
 }
 
 .register-btn {
@@ -65,7 +66,7 @@ button {
 .login-btn {
     margin-top: 20px;
     background-color: rgb(236, 236, 236);
-    border: 2px solid rgb(115, 146, 177);
+    border: 2px solid #92c24c;
 }
 
 .input-error {
