--- a/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
@@ -3,6 +3,7 @@
     <div class="links">
         <a [routerLink]="['home']" routerLinkActive="router-link-active">Home</a>
         <a [routerLink]="['manage-courses']" routerLinkActive="router-link-active" >Manage Courses</a>
+        <a [routerLink]="['login']" routerLinkActive="router-link-active" >Login</a>
         <a (click)="logout()"
            *ngIf="token">Logout</a>
     </div>
