--- a/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
@@ -2,6 +2,7 @@
     <h2>RecipeBuddy</h2>
     <div class="links">
         <a [routerLink]="['home']" routerLinkActive="router-link-active">Home</a>
+        <a [routerLink]="['view-courses']" routerLinkActive="router-link-active" >Courses</a>
         <a [routerLink]="['manage-courses']" routerLinkActive="router-link-active" >Manage Courses</a>
         <a [routerLink]="['login']" routerLinkActive="router-link-active" >Login</a>
         <a (click)="logout()"
