task/62 - auth guard & fixed navigation bar buttons

--- a/Frontend/RecipeBuddy/src/app/modules/courses/components/view-courses/components/course-card/course-card.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/courses/components/view-courses/components/course-card/course-card.component.html
@@ -5,7 +5,7 @@
     </ng-template>
     <p>{{ (course && course.shortDescription) || 'No description found' }}</p>
     <ng-template pTemplate="footer">
-        <p-button *ngIf="course && !(course.activeSubscription)" label="Subscribe" (click)="subscribeToCourse()"></p-button>
+        <p-button *ngIf="course && !(course.activeSubscription)" label="Subscribe" [disabled]="!isUserLoggedIn()" (click)="subscribeToCourse()"></p-button>
         <p-button *ngIf="course && course.activeSubscription" [disabled]="true" label="Subscribed"></p-button>
     </ng-template>
 </p-card>
