--- a/Frontend/RecipeBuddy/src/app/modules/home/components/home/home.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/home/components/home/home.component.html
@@ -1,1 +1,12 @@
-<h1>Home component</h1>
+<div class="view-courses-page">
+    <div class="view-courses-background-image">
+        <h1>Recipe Buddy</h1>
+    </div>
+    <div class="container">
+        <div class="row">
+            <p>People inexperienced at cooking find it difficult to improve their culinary skills without live guidance, or without someone to mentor them.</p>
+            <p>It is important for people to know how to cook for themselves, so that they don't have to rely on fast food diets, or on other people doing the cooking for them. Moreover, by preparing their own meals, they have the freedom to experiment with their dishes and learn what they like or dislike, and they may also find it enjoyable, thus making a hobby out of it.</p>
+            <p>By joining RecipeBuddy, users will be able to join online meetings with other people (or only with a specific mentor), that showcase their cooking sessions through webcams, and get proper guidance, without having to tirelessly search the internet for recipes, videos, and how-to's. Furthermore, trainees could look up mentors' profiles, so as to choose the mentors that would meet their expectations the most. And for further individual improvement, users could have free access to courses and recipes posted by mentors.</p>
+        </div>
+    </div>
+</div>
