--- a/Frontend/RecipeBuddy/src/app/modules/auth/components/register/register.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/auth/components/register/register.component.scss
@@ -69,6 +69,10 @@ button {
     border: 2px solid #92c24c;
 }
 
+.label-for-mentor {
+    margin: 0;
+}
+
 .input-error {
     border: red 1px solid;
 }
