--- a/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
@@ -1,5 +1,5 @@
 <header>
-    <h2>RecipeBuddy</h2>
+    <h2 (click)="navigateHome()">RecipeBuddy</h2>
     <div class="links">
         <a [routerLink]="['home']" routerLinkActive="router-link-active">Home</a>
         <a [routerLink]="['view-courses']" routerLinkActive="router-link-active" >Courses</a>
