--- a/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
@@ -4,6 +4,7 @@
         <a [routerLink]="['home']" routerLinkActive="router-link-active">Home</a>
         <a [routerLink]="['view-courses']" routerLinkActive="router-link-active" >Courses</a>
         <a [routerLink]="['manage-courses']" routerLinkActive="router-link-active"  *ngIf="isMentor">Manage Courses</a>
+        <a [routerLink]="['recipes']" routerLinkActive="router-link-active">Recipes</a>
         <a [routerLink]="['view-subscriptions']" routerLinkActive="router-link-active" *ngIf="isUserLoggedIn()">Subscriptions</a>
         <a *ngIf="!isUserLoggedIn()" [routerLink]="['login']" routerLinkActive="router-link-active" >Login</a>
         <a *ngIf="isUserLoggedIn()"
