--- a/Frontend/RecipeBuddy/src/app/modules/shared/course-card/course-card.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/shared/course-card/course-card.component.html
@@ -3,7 +3,9 @@
         <p-button *ngIf="isSubscriptionCard" class="view-button" label="View" styleClass="p-button-secondary p-button-sm" (click)="selectCourse()"></p-button>
         <img alt="Card" [src]="'assets/images/' + (isSubscriptionCard ? 'subscription' : 'course') + '-card-header.png'">
     </ng-template>
-    <p>{{ (course && course.shortDescription) || 'No description found' }}</p>
+    <p>Description: {{ (course && course.shortDescription) || 'No description found' }}</p>
+    <p>Mentor: {{ (course && course?.mentor?.name) || 'No mentor found' }}</p>
+
     <ng-template pTemplate="footer">
         <p-button *ngIf="!isSubscriptionCard && course && !(course.activeSubscription)" label="Subscribe" [disabled]="!isUserLoggedIn()" (click)="subscribeToCourse()"></p-button>
         <p-button *ngIf="!isSubscriptionCard && course && course.activeSubscription" [disabled]="true" label="Subscribed"></p-button>
