--- a/Frontend/RecipeBuddy/src/app/modules/recipes/components/view-recpies/components/recipe-manage/recipe-manage.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/recipes/components/view-recpies/components/recipe-manage/recipe-manage.component.html
@@ -46,7 +46,7 @@
                            formControlName="estimatedPrepTimeInMinutes"
                            autocomplete="off"
                            pInputText>
-                    <label for="float-input">Estimated preparation time</label>
+                    <label for="float-input">Estimated Preparation Time</label>
                 </span>
             </div>
             <div *ngIf="mode === 'add'"
