--- a/Frontend/RecipeBuddy/src/app/modules/home/components/home/home.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/home/components/home/home.component.html
@@ -6,7 +6,8 @@
         <div class="row">
             <p>People inexperienced at cooking find it difficult to improve their culinary skills without live guidance, or without someone to mentor them.</p>
             <p>It is important for people to know how to cook for themselves, so that they don't have to rely on fast food diets, or on other people doing the cooking for them. Moreover, by preparing their own meals, they have the freedom to experiment with their dishes and learn what they like or dislike, and they may also find it enjoyable, thus making a hobby out of it.</p>
-            <p>By joining RecipeBuddy, users will be able to join online meetings with other people (or only with a specific mentor), that showcase their cooking sessions through webcams, and get proper guidance, without having to tirelessly search the internet for recipes, videos, and how-to's. Furthermore, trainees could look up mentors' profiles, so as to choose the mentors that would meet their expectations the most. And for further individual improvement, users could have free access to courses and recipes posted by mentors.</p>
+            <p>By joining RecipeBuddy, users will have the option to subscribe to courses posted by mentors (for free), this way being able to join online meetings with other people, as well as with the course's mentor, that showcase the mentor's culinary sessions through a webcam. By attending live meetings, users can get proper guidance, while also interacting with mentors, and in doing so, they won't have to tirelessly search the internet for recipes, videos, and how-to's. Moreover, for further individual improvement, users have free access to the contents of courses and recipes posted by other users.</p>
+            <p>Happy learning!</p>
         </div>
     </div>
 </div>
