--- a/Frontend/RecipeBuddy/src/app/modules/courses/components/view-courses/view-courses.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/courses/components/view-courses/view-courses.component.scss
@@ -40,7 +40,7 @@
     font-size: 2em;
     text-align: center;
     padding: 0 0.5em;
-    background-color: #d3d3d3;
+    background-color: #fffadd;
     text-transform: uppercase;
-    font-weight: lighter;
+    font-weight: 200;
 }
