--- a/Frontend/RecipeBuddy/src/app/modules/recipes/components/view-recpies/view-recipes.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/recipes/components/view-recpies/view-recipes.component.scss
@@ -50,9 +50,9 @@
     font-size: 2em;
     text-align: center;
     padding: 0 0.5em;
-    background-color: #d3d3d3;
+    background-color: #fffadd;
     text-transform: uppercase;
-    font-weight: lighter;
+    font-weight: 200;
 }
 
 .switch-mode {
