--- a/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/shared/header/header.component.html
@@ -6,6 +6,7 @@
         <a [routerLink]="['manage-courses']" routerLinkActive="router-link-active"  *ngIf="isMentor">Manage Courses</a>
         <a [routerLink]="['recipes']" routerLinkActive="router-link-active">Recipes</a>
         <a [routerLink]="['view-subscriptions']" routerLinkActive="router-link-active" *ngIf="isUserLoggedIn()">Subscriptions</a>
+        <a [routerLink]="['profile']" routerLinkActive="router-link-active" *ngIf="isUserLoggedIn()">Profile</a>
         <a *ngIf="!isUserLoggedIn()" [routerLink]="['login']" routerLinkActive="router-link-active" >Login</a>
         <a *ngIf="isUserLoggedIn()"
             (click)="logout()">Logout</a>
