profile page logic

--- a/Frontend/RecipeBuddy/src/app/modules/profile/profile-page/profile-page.component.html
+++ b/Frontend/RecipeBuddy/src/app/modules/profile/profile-page/profile-page.component.html
@@ -4,14 +4,16 @@
             <label for="username">Username</label>
             <input id="name"
                    formControlName="name"
-                   autocomplete="off">
+                   autocomplete="off"
+                   placeholder="Enter username">
         </div>
 
         <div class="form-row">
             <label for="email">Email</label>
             <input id="email"
                    formControlName="email"
-                   autocomplete="off">
+                   autocomplete="off"
+                   placeholder="Enter email">
         </div>
 
         <button type="button"
