Fixes for profile page and modified the style of pages

--- a/Frontend/RecipeBuddy/src/app/modules/auth/components/login/login.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/auth/components/login/login.component.scss
@@ -11,7 +11,7 @@ form{
     width: 350px;
     border-radius: 3px;
     box-shadow: rgba(0, 0, 0, 0.16) 0px 1px 4px;
-    background-color: #d3c48c;
+    background-color: #faeec1;
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -55,6 +55,5 @@ button{
 
 .create-btn{
     margin-top: 20px;
-    background-color: #d3c48c;
-    border: 2px solid #fcd949;
+    background-color: #fcd949;
 }
