--- a/Frontend/RecipeBuddy/src/app/modules/courses/components/view-subscriptions/view-subscriptions.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/courses/components/view-subscriptions/view-subscriptions.component.scss
@@ -44,3 +44,10 @@
     text-transform: uppercase;
     font-weight: lighter;
 }
+
+.no-subscriptions {
+    padding: 2em 0;
+    text-align: center;
+    font-weight: 300;
+    font-size: 2em;
+}
