--- a/Frontend/RecipeBuddy/src/app/modules/courses/components/view-courses/view-courses.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/courses/components/view-courses/view-courses.component.scss
@@ -44,3 +44,10 @@
     text-transform: uppercase;
     font-weight: 200;
 }
+
+.no-courses {
+    padding: 2em 0;
+    text-align: center;
+    font-weight: 300;
+    font-size: 2em;
+}
