--- a/Frontend/RecipeBuddy/src/app/modules/recipes/components/view-recpies/view-recipes.component.scss
+++ b/Frontend/RecipeBuddy/src/app/modules/recipes/components/view-recpies/view-recipes.component.scss
@@ -60,3 +60,10 @@
     top: 3rem;
     left: 3rem;
 }
+
+.no-recipes {
+    padding: 2em 0;
+    text-align: center;
+    font-weight: 300;
+    font-size: 2em;
+}
